Changes from jTDS 1.0.3
=======================

06/10/2005 - Alin Sinpalean
 o Corrected bug [1217786] Moving to "beforeFirst" with ResultSet.absolute(-X)
   and a number of related absolute() and relative() issues with
   MSCursorResultSet.

06/03/2005 - Alin Sinpalean
 o Removed no longer needed cache classes.
 o Corrected an issue with savepoints, which was causing cached procedures to
   not be dropped by the driver on a savepoint rollback.
 o Removed already fixed or outdated TODO comments.

06/02/2005 - Alin Sinpalean
 o Applied Mike's fix for bug [1212905] PreparedStatement.setFloat issue.
 o Moved all the "create cursor or use direct execution" logic into a single
   place and corrected an issue where useCursors=true would cause a cursor
   prepare to be issued even on executeUpdate().

06/01/2005 - Alin Sinpalean
 o Initial implementation for extended scrollability/updatability support
   (TYPE_SCROLL_SENSITIVE for keyset cursors, TYPE_SCROLL_SENSITIVE + 1 for
   dynamic cursors, CONCUR_UPDATABLE for optimistic concurrency w/ timestamps,
   CONCUR_UPDATABLE + 1 for pessimistic concurrency and  CONCUR_UPDATABLE + 2
   for optimistic concurrency w/ value checking). All the new values work with
   Sybase too, but the behavior is the same as the default.

05/30/2005 - Alin Sinpalean
 o Changed the default prepareSQL mode from 1 (temporary stored procedures) to
   3 (sp_prepare) for SQL Server. For Sybase, the default is still 1.
 o Corrected a bug in DateTime that was causing -1 to be stored as the time
   component of a DATETIME field for a Date value.
 o Applied Mike's patch [1210936] Change byte array to string conversions; the
   patch changes the way byte[] to String conversions are made (now hex values
   are returned) and also a bug with SELECT DISTINCT not working with Sybase.
 o Added information about the useCursors property (and fast forward-only
   cursors to the FAQ).
 o Made the maximum global buffer memory and minimum local buffer packets